--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "newproxy",
-  "version": "1.3.6",
+  "version": "1.3.18",
   "description": "",
   "keywords": [],
   "main": "dist/lib/new-proxy.js",
@@ -66,6 +66,7 @@
     ]
   },
   "devDependencies": {
+    "@types/debug": "^4.1.5",
     "@types/jest": "^23.3.2",
     "@types/mkdirp": "^1.0.0",
     "@types/node": "^10.17.24",
@@ -101,10 +102,13 @@
     "typescript": "^3.9.3"
   },
   "dependencies": {
+    "@postman/tunnel-agent": "github:postmanlabs/tunnel-agent",
     "agentkeepalive": "^4.1.2",
     "chalk": "^4.0.0",
+    "debug": "^4.1.1",
     "mkdirp": "^1.0.4",
+    "node-cache": "^5.1.0",
     "node-forge": "^0.9.1",
-    "tunnel-agent": "^0.6.0"
+    "ts-hashcode": "^1.0.2"
   }
 }
