--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "newproxy",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "description": "",
   "keywords": [],
   "main": "dist/lib/new-proxy.js",
@@ -25,7 +25,8 @@
     "test": "jest --coverage",
     "test:watch": "jest --coverage --watch",
     "test:prod": "npm run lint && npm run test -- --no-cache",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "types": "dts-bundle --name newproxy --main dist/types/new-proxy.d.ts --removeSource"
   },
   "husky": {
     "hooks": {
@@ -67,47 +68,48 @@
   },
   "devDependencies": {
     "@types/debug": "^4.1.5",
-    "@types/jest": "^23.3.2",
-    "@types/mkdirp": "^1.0.0",
-    "@types/node": "^10.17.24",
-    "@types/node-forge": "^0.9.3",
-    "@typescript-eslint/eslint-plugin": "^1.6.0",
-    "@typescript-eslint/parser": "^2.34.0",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-typescript": "^1.1.0",
-    "eslint-config-prettier": "^4.1.0",
+    "@types/jest": "^26.0.9",
+    "@types/mkdirp": "^1.0.1",
+    "@types/node": "^14.0.27",
+    "@types/node-forge": "^0.9.4",
+    "@typescript-eslint/eslint-plugin": "^3.9.0",
+    "@typescript-eslint/parser": "^3.9.0",
+    "dts-bundle": "^0.7.3",
+    "eslint": "^7.6.0",
+    "eslint-config-airbnb-typescript": "^9.0.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jest": "^22.4.1",
-    "eslint-plugin-jsx-a11y": "^6.2.0",
-    "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-unicorn": "^8.0.1",
-    "husky": "^1.0.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^23.20.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.20.5",
+    "eslint-plugin-unicorn": "^21.0.0",
+    "husky": "^4.2.5",
     "import-sort-parser-babylon": "^6.0.0",
     "import-sort-parser-typescript": "^6.0.0",
     "import-sort-style-module": "^6.0.0",
-    "jest": "^26.0.1",
-    "jest-config": "^26.0.1",
-    "lint-staged": "^8.0.0",
-    "prettier": "^1.14.3",
-    "rimraf": "^2.6.2",
-    "shelljs": "^0.8.3",
-    "ts-jest": "^26.0.0",
-    "ts-node": "^7.0.1",
-    "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.15.0",
-    "tslint-config-standard": "^8.0.1",
-    "typedoc": "^0.17.7",
-    "typescript": "^3.9.3"
+    "jest": "^26.3.0",
+    "jest-config": "^26.3.0",
+    "lint-staged": "^10.2.11",
+    "prettier": "^2.0.5",
+    "rimraf": "^3.0.2",
+    "shelljs": "^0.8.4",
+    "ts-jest": "^26.2.0",
+    "ts-node": "^8.10.2",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-config-standard": "^9.0.0",
+    "typedoc": "^0.18.0",
+    "typescript": "^3.9.7"
   },
   "dependencies": {
     "@postman/tunnel-agent": "github:postmanlabs/tunnel-agent",
-    "agentkeepalive": "^4.1.2",
-    "chalk": "^4.0.0",
+    "agentkeepalive": "^4.1.3",
+    "chalk": "^4.1.0",
     "debug": "^4.1.1",
     "mkdirp": "^1.0.4",
-    "node-cache": "^5.1.0",
+    "node-cache": "^5.1.2",
     "node-forge": "^0.9.1",
     "ts-hashcode": "^1.0.2"
   }
