--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "newproxy",
-  "version": "1.5.2",
+  "version": "1.5.3",
   "description": "",
   "keywords": [],
   "main": "dist/lib/new-proxy.js",
@@ -68,49 +68,49 @@
   },
   "devDependencies": {
     "@types/debug": "^4.1.5",
-    "@types/jest": "^26.0.9",
+    "@types/jest": "^26.0.15",
     "@types/mkdirp": "^1.0.1",
-    "@types/node": "^14.0.27",
-    "@types/node-forge": "^0.9.4",
-    "@typescript-eslint/eslint-plugin": "^3.9.0",
-    "@typescript-eslint/parser": "^3.9.0",
+    "@types/node": "^14.14.7",
+    "@types/node-forge": "^0.9.5",
+    "@typescript-eslint/eslint-plugin": "^4.7.0",
+    "@typescript-eslint/parser": "^4.7.0",
     "dts-bundle": "^0.7.3",
-    "eslint": "^7.6.0",
-    "eslint-config-airbnb-typescript": "^9.0.0",
-    "eslint-config-prettier": "^6.11.0",
+    "eslint": "^7.13.0",
+    "eslint-config-airbnb-typescript": "^12.0.0",
+    "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jest": "^23.20.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.20.5",
-    "eslint-plugin-unicorn": "^21.0.0",
-    "husky": "^4.2.5",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-unicorn": "^23.0.0",
+    "husky": "^4.3.0",
     "import-sort-parser-babylon": "^6.0.0",
     "import-sort-parser-typescript": "^6.0.0",
     "import-sort-style-module": "^6.0.0",
-    "jest": "^26.3.0",
-    "jest-config": "^26.3.0",
-    "lint-staged": "^10.2.11",
-    "prettier": "^2.0.5",
+    "jest": "^26.6.3",
+    "jest-config": "^26.6.3",
+    "lint-staged": "^10.5.1",
+    "prettier": "^2.1.2",
     "rimraf": "^3.0.2",
     "shelljs": "^0.8.4",
-    "ts-jest": "^26.2.0",
-    "ts-node": "^8.10.2",
+    "ts-jest": "^26.4.4",
+    "ts-node": "^9.0.0",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^9.0.0",
-    "typedoc": "^0.18.0",
-    "typescript": "^3.9.7"
+    "typedoc": "^0.19.2",
+    "typescript": "^4.0.5"
   },
   "dependencies": {
-    "@postman/tunnel-agent": "github:postmanlabs/tunnel-agent",
+    "@postman/tunnel-agent": "^0.6.3",
     "agentkeepalive": "^4.1.3",
     "chalk": "^4.1.0",
-    "debug": "^4.1.1",
+    "debug": "^4.2.0",
     "mkdirp": "^1.0.4",
     "node-cache": "^5.1.2",
-    "node-forge": "^0.9.1",
+    "node-forge": "^0.10.0",
     "ts-hashcode": "^1.0.2"
   }
 }
