--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "newproxy",
-  "version": "1.5.9",
+  "version": "1.5.10",
   "description": "HTTP/HTTPS Proxy server with overrides & MITM support",
   "keywords": [],
   "main": "dist/lib/new-proxy.js",
@@ -26,8 +26,7 @@
     "test": "jest --coverage",
     "test:watch": "jest --coverage --watch",
     "test:prod": "npm run lint && npm run test -- --no-cache",
-    "precommit": "lint-staged",
-    "types": "dts-bundle --name newproxy --main dist/types/new-proxy.d.ts --removeSource"
+    "precommit": "lint-staged"
   },
   "husky": {
     "hooks": {
@@ -68,46 +67,42 @@
     ]
   },
   "devDependencies": {
-    "@types/debug": "^4.1.6",
-    "@types/jest": "^26.0.23",
-    "@types/mkdirp": "^1.0.1",
-    "@types/node": "^16.0.0",
-    "@types/node-forge": "^0.10.0",
-    "@typescript-eslint/eslint-plugin": "^4.28.1",
-    "@typescript-eslint/parser": "^4.28.1",
-    "dts-bundle": "^0.7.3",
-    "eslint": "^7.30.0",
+    "@types/debug": "^4.1.7",
+    "@types/jest": "^26.0.24",
+    "@types/mkdirp": "^1.0.2",
+    "@types/node": "^16.4.13",
+    "@types/node-forge": "^0.10.2",
+    "@typescript-eslint/eslint-plugin": "^4.29.1",
+    "@typescript-eslint/parser": "^4.29.1",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-jest": "^24.3.6",
+    "eslint-plugin-import": "^2.24.0",
+    "eslint-plugin-jest": "^24.4.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-unicorn": "^34.0.1",
-    "husky": "^7.0.0",
+    "eslint-plugin-unicorn": "^35.0.0",
+    "husky": "^7.0.1",
     "import-sort-parser-babylon": "^6.0.0",
     "import-sort-parser-typescript": "^6.0.0",
     "import-sort-style-module": "^6.0.0",
     "jest": "^27.0.6",
     "jest-config": "^27.0.6",
-    "lint-staged": "^11.0.0",
+    "lint-staged": "^11.1.2",
     "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
     "shelljs": "^0.8.4",
-    "ts-jest": "^27.0.3",
+    "ts-jest": "^27.0.4",
     "ts-node": "^10.0.0",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-config-standard": "^9.0.0",
-    "typedoc": "^0.21.2",
+    "typedoc": "^0.21.5",
     "typescript": "^4.3.5"
   },
   "dependencies": {
     "@postman/tunnel-agent": "^0.6.3",
     "agentkeepalive": "^4.1.4",
-    "chalk": "^4.1.1",
+    "chalk": "^4.1.2",
     "debug": "^4.3.2",
     "mkdirp": "^1.0.4",
     "node-cache": "^5.1.2",
