--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "test": "jest --coverage",
     "test:watch": "jest --coverage --watch",
     "test:prod": "npm run lint && npm run test -- --no-cache",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "update": "npx npm-check -u -E -s"
   },
   "husky": {
     "hooks": {
@@ -73,51 +74,51 @@
     ]
   },
   "devDependencies": {
-    "@rollup/plugin-typescript": "^8.3.0",
+    "@rollup/plugin-typescript": "11.1.6",
     "@types/debug": "^4.1.7",
-    "@types/jest": "^27.0.2",
-    "@types/mkdirp": "^1.0.2",
-    "@types/node": "^16.11.6",
-    "@typescript-eslint/eslint-plugin": "^5.2.0",
-    "@typescript-eslint/parser": "^5.2.0",
-    "eslint": "^8.1.0",
-    "eslint-config-airbnb-typescript": "^14.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jest": "^25.2.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "^5.1.1",
-    "eslint-plugin-unicorn": "^37.0.1",
+    "@types/jest": "29.5.12",
+    "@types/mkdirp": "2.0.0",
+    "@types/node": "20.12.7",
+    "@typescript-eslint/eslint-plugin": "*",
+    "@typescript-eslint/parser": "*",
+    "eslint": "*",
+    "eslint-config-airbnb-typescript": "*",
+    "eslint-config-prettier": "*",
+    "eslint-plugin-eslint-comments": "*",
+    "eslint-plugin-import": "*",
+    "eslint-plugin-jest": "*",
+    "eslint-plugin-jsx-a11y": "*",
+    "eslint-plugin-prettier": "*",
+    "eslint-plugin-promise": "*",
+    "eslint-plugin-unicorn": "*",
     "got": "^11.8.2",
-    "hpagent": "^0.1.2",
+    "hpagent": "1.2.0",
     "husky": "^7.0.4",
     "import-sort-parser-babylon": "^6.0.0",
     "import-sort-parser-typescript": "^6.0.0",
     "import-sort-style-module": "^6.0.0",
-    "jest": "^27.3.1",
-    "jest-config": "^27.3.1",
-    "lint-staged": "^11.2.6",
-    "prettier": "^2.4.1",
-    "rimraf": "^3.0.2",
-    "rollup": "^2.58.3",
-    "rollup-plugin-dts": "^4.0.0",
-    "shelljs": "^0.8.4",
-    "ts-jest": "^27.0.7",
+    "jest": "29.7.0",
+    "jest-config": "29.7.0",
+    "lint-staged": "15.2.2",
+    "prettier": "*",
+    "rimraf": "5.0.5",
+    "rollup": "4.16.4",
+    "rollup-plugin-dts": "6.1.0",
+    "shelljs": "0.8.5",
+    "ts-jest": "29.1.2",
     "ts-node": "^10.4.0",
-    "typedoc": "^0.22.7",
-    "typescript": "^4.4.4"
+    "typedoc": "0.25.13",
+    "typescript": "5.4.5"
   },
   "dependencies": {
     "@postman/tunnel-agent": "^0.6.3",
-    "@types/node-forge": "^0.10.9",
+    "@types/node-forge": "1.3.11",
     "agentkeepalive": "^4.1.4",
     "chalk": "^4.1.2",
     "debug": "^4.3.2",
-    "mkdirp": "^1.0.4",
+    "mkdirp": "3.0.1",
     "node-cache": "^5.1.2",
-    "node-forge": "^0.10.0",
+    "node-forge": "1.3.1",
     "ts-hashcode": "^1.0.2"
   }
 }
